apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      namespace: linkding
      labels:
        app.kubernetes.io/name: linkding
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.42.0
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: linkding-volume
            mountPath: /etc/linkding/data
      volumes:
      - name: linkding-volume
        persistentVolumeClaim:
          claimName: linkding-storage
