apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  selector:
    app.kubernetes.io/name: linkding
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
